modified tables, added register endpoint, todo - admin table
